# frenchPresidentialElection_dataViz

./: README.md  analysis.ipynb  extract.py  pyproject.toml  requirements.txt  sandox.ipynb  scraping.py  transform.py
src/example_package_frenchPresidentialElection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/notebooks/: analysis.ipynb  cleaning.ipynb
src/pdf_library/: my_pdf.py  table_class.py
src/programs/: extract.py  generate_presNational_report.py  get_city_location.py  scraping.py  test.py  transform.py  utility.py
src/programs/pdf_library/: my_pdf.py  table_class.py
