[project]
name = "example_package_frenchPresidentialElection"
version = "0.0.1"
authors = [
  { name="Benoit Terral", email="benoit.terral@gmail.com" },
]
description = "Dataviz of french presidential election with data from https://unehistoireduconflitpolitique.fr/"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/benoitTerral/frenchPresidentialElection_dataViz"
"Bug Tracker" = "https://github.com/benoitTerral/frenchPresidentialElection_dataViz/issues"